--- a/src/app/component/shared/navbar/navbar.component.html
+++ b/src/app/component/shared/navbar/navbar.component.html
@@ -1,3 +1,14 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" routerLink="/"> <img class="app-logo" src="../../assets/favicon.png" alt="Logo"> Codersboat</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a routerLink="contact-us"> Contact </a>
+      </li>
+    </ul>
+  </div>
+</nav>
